# password-manager-gui

./: .gitignore  Makefile  README.md  encryption.py  main.py  pyproject.toml  tempCodeRunnerFile.py
.github/workflows/: empty.yml  lint.yml  linter.yml  liter.yml  main.yml  mpty.yml
backend/: server.py
database/: database_base.py  local_database.py
password_manager_gui/backend/: encryption.py  server.py
password_manager_gui/database/: database_base.py  local_database.py
password_manager_gui/models/: password_model.py  user_model.py
password_manager_gui/ui/: main.py
passwords/: encrypted-passwords.txt
tests/: conftest.py
tests/tests_server/: test_password.py  test_user.py
