[tool.poetry]
name = "password-manager-gui"
version = "0.1.0"
description = ""
authors = ["Leon Markovich <leonmarkovich97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^42.0.5"
pandas = "^2.2.1"
random-password-generator = "^2.2.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
