[tool.poetry]
name = "password-manager-gui"
version = "0.1.0"
description = ""
authors = ["Leon Markovich <leonmarkovich97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^42.0.5"
pandas = "^2.2.1"
random-password-generator = "^2.2.0"
pyperclip = "^1.8.2"
ruff = "^0.3.3"
black = "^24.3.0"
pydantic = "^2.6.4"
fastapi = {version = "^0.110.0", extras = ["all"]}
requests = "^2.31.0"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
